--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 edition = "2021"
 version = "0.1.0"
 authors = ["Kaede Team"]
-license = "Apache-2.0"
+license = "GPL-2.0-only"
 
 [workspace.dependencies]
 tokio = { version = "1", features = ["full"] }
