--- a/crates/pieskieo-server/Cargo.toml
+++ b/crates/pieskieo-server/Cargo.toml
@@ -22,3 +22,5 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 rand.workspace = true
 sqlparser.workspace = true
 base64 = "0.21"
+argon2 = "0.5"
+rand_core = "0.6"
