--- a/crates/pieskieo-server/Cargo.toml
+++ b/crates/pieskieo-server/Cargo.toml
@@ -23,9 +23,21 @@ sqlparser.workspace = true
 base64 = "0.21"
 argon2 = "0.5"
 rand_core = "0.6"
-tokio-stream = { version = "0.1", features = ["net"] }
-tokio-rustls = "0.24"
-rustls = "0.21"
-rustls-pemfile = "1"
-tower = { workspace = true, features = ["limit"] }
-hyper = { version = "1", features = ["server", "http1", "http2"] }
+tokio-stream = { version = "0.1", optional = true, features = ["net"] }
+tokio-rustls = { version = "0.24", optional = true }
+rustls = { version = "0.21", optional = true }
+rustls-pemfile = { version = "1", optional = true }
+tower = { workspace = true }
+hyper = { version = "1", optional = true, features = ["server", "http1", "http2"] }
+axum-server = { version = "0.6", optional = true, features = ["rustls"] }
+
+[features]
+default = []
+tls = [
+    "tokio-stream",
+    "tokio-rustls",
+    "rustls",
+    "rustls-pemfile",
+    "hyper",
+    "axum-server",
+]
