--- a/crates/pieskieo-server/Cargo.toml
+++ b/crates/pieskieo-server/Cargo.toml
@@ -31,6 +31,7 @@ tower = { workspace = true }
 hyper = { version = "1", optional = true, features = ["server", "http1", "http2"] }
 axum-server = { version = "0.6", optional = true, features = ["rustls"] }
 chrono = "0.4"
+bincode = "1"
 
 [features]
 default = []
