--- a/crates/pieskieo-cli/Cargo.toml
+++ b/crates/pieskieo-cli/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
 rustyline = "13"
 serde = { workspace = true }
 rpassword = "7"
+ctrlc = "3"
 
 [[bin]]
 name = "pieskieo"
