--- a/crates/pieskieo-server/Cargo.toml
+++ b/crates/pieskieo-server/Cargo.toml
@@ -14,7 +14,7 @@ serde_json.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
-axum.workspace = true
+axum = { workspace = true, features = ["ws"] }
 uuid.workspace = true
 futures = "0.3"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
@@ -32,6 +32,8 @@ hyper = { version = "1", optional = true, features = ["server", "http1", "http2"
 axum-server = { version = "0.6", optional = true, features = ["rustls"] }
 chrono = "0.4"
 bincode = "1"
+tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
+tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
 
 [features]
 default = []
