--- a/crates/pieskieo-cli/Cargo.toml
+++ b/crates/pieskieo-cli/Cargo.toml
@@ -1,24 +1,29 @@
 [package]
 name = "pieskieo-cli"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
-anyhow = "1"
+anyhow.workspace = true
 clap = { version = "4.5", features = ["derive", "env"] }
-serde_json = "1"
-uuid = { version = "1", features = ["v4", "serde"] }
+serde_json.workspace = true
+uuid.workspace = true
 pieskieo-core = { path = "../pieskieo-core" }
-tokio = { workspace = true, features = ["full"] }
-pieskieo-server = { path = "../pieskieo-server" }
-reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
+tokio.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
 rustyline = "13"
-serde = { workspace = true }
-rpassword = "7"
+serde.workspace = true
 ctrlc = "3"
-dirs = { workspace = true }
+dirs.workspace = true
+
+[[bin]]
+name = "pieskieod"
+path = "src/daemon.rs"
 
 [[bin]]
 name = "pieskieo"
-path = "src/main.rs"
+path = "src/client.rs"
 
