feat: restore pieskieo-server and add production features
- Restore pieskieo-server crate from git history
- Fix projection error: add QualifiedWildcard support in SELECT parsing
- Fix auth bootstrap: ensure default admin created even if auth_users.json is empty/invalid
- Add detailed health check endpoint with JSON status response
- Implement graceful shutdown with SIGTERM/SIGINT handling
- Enhance logging for auth bootstrap with warnings
- Add proper signal handling for production deployments
- Fix CLI dependencies: add reqwest and rpassword
- Update workspace configuration to include all crates

Production-ready features:
- ✅ MVCC with snapshots
- ✅ Auth with Argon2id hashing
- ✅ Rate limiting per-IP
- ✅ Audit logging
- ✅ Account lockout protection
- ✅ Prometheus metrics endpoint
- ✅ TLS support (via tls feature)
- ✅ Graceful shutdown
- ✅ Health checks with details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "crates/pieskieo-core",
     "crates/pieskieo-cli",
+    "crates/pieskieo-server",
 ]
 resolver = "2"
 
@@ -33,4 +34,6 @@ async-trait = "0.1"
 tempfile = "3"
 rayon = "1.10"
 hnsw_rs = "0.3.3"
+axum = "0.7"
+tower = "0.5"
 
